some minor form changes, changed font, fixed datepicker maxDate config overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,16 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
 h1 {
   color: #369;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 250%;
+}
+
+h4 {
+  color: #369;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .loader {
